[package]
name = "zkrollup"
description = 'zkrollup implementation'
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
homepage = 'https://github.com/KogarashiNetwork/Kogarashi/'
repository = 'https://github.com/KogarashiNetwork/Kogarashi/'
readme = 'README.md'
categories = ["cryptography"]
keywords = ["zkp", "blockchain", "elliptic-curve"]

[dependencies]
anyhow = "1.0.75"
zkstd = { version = "0.0.22", default-features = false }
jub-jub = { version = "0.0.20", default-features = false }
bls-12-381 = { version = "0.0.23", default-features = false }
zkplonk = { version = "0.0.1", default-features = false }
zksnarks = { version = "0.0.1", default-features = false }
ec-pairing = { version = "0.0.14", default-features = false }
red-jubjub = { version = "0.0.20", default-features = false }
ark-std = "0.4.0"
rand_core = { version="0.6.4", features = ["getrandom"] }
sp-std = { version = '3.0.0', default-features = false }
serde = { version = "1.0.102", default-features = false, features = ["derive"] }
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
rand_xorshift = { version = '0.2.0', default-features = false, package = 'fullcodec_rand_xorshift' }

[dev-dependencies]
rand = "0.8.5"
